--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -4,7 +4,7 @@
   width: 100vw;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
-  overflow: hidden;
+  overflow: visible;
   background-color: var(--background-color);
 }
 
@@ -20,6 +20,7 @@
   background-image: url('/images/cookies-hero.jpg');
   background-size: cover;
   background-position: center;
+  /* No overlay or filter */
 }
 
 .hero-section:hover .hero-bg {
@@ -32,7 +33,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6));
+  background: none;
   z-index: 2;
 }
 
